--- a/Primer_Parcial_WebIII/appsettings.json
+++ b/Primer_Parcial_WebIII/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Recetas;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=Falso;TrustServerCertificate=Trues"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=CC302-18\\SQL2025;Database=Recetas;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=Falso;TrustServerCertificate=Trues"
+    }
 }
